New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Modified CMakeLists.txt to execute getsvnrev.sh when cmake is executed.
Added executable to execute getsvnrev.sh properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -514,6 +514,15 @@ set( EXEC_INSTALL_DIR bin )
 set( LIB_INSTALL_DIR lib )
 set( PYTHON_INSTALL_DIR python/${PYTHONV}/asap )
 set( SHARED_INSTALL_DIR share/asap )
+
+#
+# execute getsvnrev.sh to create/update svninfo.txt
+# run chmod to make sure the script has executable 
+#
+exec_program( chmod ARGS a+x ${ASAP_SOURCE_DIR}/getsvnrev.sh )
+exec_program( chmod ARGS a+x ${ASAP_SOURCE_DIR}/cmake/exec_getsvnrev.sh )
+exec_program( ${ASAP_SOURCE_DIR}/cmake/exec_getsvnrev.sh ARGS ${ASAP_SOURCE_DIR})
+
 # Add the modules to be built.
 #
 # Choose to have correct RPATHs both in the build tree and
