New Development: Yes             JIRA Issue: No (reorganization of modules)         Ready for Test: Yes      Interface Changes: Yes What Interface Changed: the modules casatoolbar, flagtoolbar, notaionwindow, were reorganized as customgui_base, customgui_tkagg, and customgui_qt4agg, based on backend          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -18,19 +18,19 @@ set( PYTHON_MODULES
      ${PYTHONDIR}/asaplot.py
      ${PYTHONDIR}/asapmath.py
      ${PYTHONDIR}/asapplotter.py
-     ${PYTHONDIR}/casatoolbar.py
      ${PYTHONDIR}/compatibility.py
      ${PYTHONDIR}/coordinate.py
+     ${PYTHONDIR}/customgui_base.py
+     ${PYTHONDIR}/customgui_tkagg.py
+     ${PYTHONDIR}/customgui_qt4agg.py
      ${PYTHONDIR}/env.py
      ${PYTHONDIR}/flagplotter.py
-     ${PYTHONDIR}/flagtoolbar.py
      ${PYTHONDIR}/__init__.py
      ${PYTHONDIR}/interactivemask.py
      ${PYTHONDIR}/ipysupport.py
      ${PYTHONDIR}/lagflagger.py
      ${PYTHONDIR}/linecatalog.py
      ${PYTHONDIR}/logging.py
-     ${PYTHONDIR}/notationwindow.py
      ${PYTHONDIR}/opacity.py
      ${PYTHONDIR}/parameters.py
      ${PYTHONDIR}/scantable.py
