--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -9,7 +9,6 @@ XS-Python-Version: >= 2.5
 
 Package: asap
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}, python-matplotlib (>= 0.99.1), libboost-python1.34.1, ipython (>= 0.8), python-numpy (>= 1.3),
-libatlas3gf-base, libblas3gf, liblapack3gf, libgfortran3, libstdc++6
+Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}, python-matplotlib (>= 0.99.1), libboost-python1.34.1, ipython (>= 0.8), python-numpy (>= 1.3),libatlas3gf-base, libblas3gf, liblapack3gf, libgfortran3, libstdc++6
 Description: The ATNF Spectral-line Analysis Package
  Blah blah
