--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -542,6 +542,9 @@ set( ASAPLIB asap )
 set( PYRAPLIB pyrap )
 set( ATNFLIB atnf )
 set( ASAP2TO3 asap2to3 )
+if ( NOT STANDALONE )
+   set( ASDM2ASAP asdm2ASAP )
+endif()
 
 #
 # always install by default
