New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: Yes What Interface Changed: Defined CXX_FLAGS_TAIL_END          Test Programs: build asap   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Defined CXX_FLAGS_TAIL_END option. If it is defined when cmaking, 
those options will be put at the end of compile options.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,14 @@ set( CMAKE_EXE_LINKER_FLAGS_RELEASE "-Wl,-s" )
 set( CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL "-Wl,-s" )
 set( CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "-Wl,-s" )
 
+if ( DEFINED CXX_FLAGS_TAIL_END )
+   set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${CXX_FLAGS_TAIL_END}" )
+   set( CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${CXX_FLAGS_TAIL_END}" )
+   set( CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${CXX_FLAGS_TAIL_END}" )
+   set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${CXX_FLAGS_TAIL_END}" )
+   set( CMAKE_CXX_FLAGS_PROFILE "${CMAKE_CXX_FLAGS_PROFILE} ${CXX_FLAGS_TAIL_END}" )
+endif()
+
 # default flags
 set( DEFAULT_CXX_FLAGS
      "-pipe -Wall -Wextra -Wno-non-template-friend -Wcast-align -Wno-comment" )
