--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,7 @@ set( ASAP_SRCS
      ${SRCDIR}/MSFiller.cpp
      ${SRCDIR}/MSWriter.cpp
      ${SRCDIR}/AsapLogSink.cpp
+     ${SRCDIR}/STUpgrade.cpp 
      ${SRCDIR}/Templates.cpp )
 
 set( ASAP_PYSRCS
