New Development: Yes             JIRA Issue: Yes CAS-2816         Ready for Test: No      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Defined new class STGrid and its python interface.
The STGrid class performs single dish gridding.
At the moment, only single polarization data is supported.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ set( ASAP_SRCS
      ${SRCDIR}/MSWriter.cpp
      ${SRCDIR}/AsapLogSink.cpp
      ${SRCDIR}/STUpgrade.cpp 
+     ${SRCDIR}/STGrid.cpp
      ${SRCDIR}/Templates.cpp )
 
 set( ASAP_PYSRCS
@@ -77,6 +78,7 @@ set( ASAP_PYSRCS
      ${SRCDIR}/python_MSFiller.cpp
      ${SRCDIR}/python_MSWriter.cpp
      ${SRCDIR}/python_LogSink.cpp
+     ${SRCDIR}/python_STGrid.cpp
      ${SRCDIR}/python_asap.cpp )
 
 add_library( ${ASAPLIB} SHARED ${ASAP_SRCS} ${ASAP_PYSRCS} )
