New Development: No             JIRA Issue: Yes related to CAS-3471         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: build and run test_importasdm_sd   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Make symbolic link of _asap.so to $CASAROOT/$CASAARCH/lib/

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -101,3 +101,8 @@ add_dependencies( inst ${ASAPLIB} )
 # install directory
 install( TARGETS ${ASAPLIB}
          LIBRARY DESTINATION ${PYTHON_INSTALL_DIR} )
+if( NOT STANDALONE )
+  execute_process(
+    COMMAND ln -Fs ../${PYTHON_INSTALL_DIR}/_asap.so ${CMAKE_INSTALL_PREFIX}/lib/_asap.so
+    OUTPUT_VARIABLE stuff)
+endif()
