New Development: No             JIRA Issue: Yes CAS-3665         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
CMakeLists.txt is updated mainly for Mac.

  - library name for asap library is still _asap.so (not .dylib) 
  - architecture name is always 'darwin64' when OS version is 10.6 or later
  - make symbolic link to $CASAROOT/$CASAARCH/python/2.6/asap/_asap.so 
    and place it to $CASAROOT/$CASAARCH/lib

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -104,6 +104,6 @@ install( TARGETS ${ASAPLIB}
          LIBRARY DESTINATION ${PYTHON_INSTALL_DIR} )
 if( NOT STANDALONE )
   execute_process(
-    COMMAND ln -Fs ../${PYTHON_INSTALL_DIR}/_asap.so ${CMAKE_INSTALL_PREFIX}/lib/_asap.so
+    COMMAND ln -Fs ../${PYTHON_INSTALL_DIR}/_${ASAPLIB}.so ${CMAKE_INSTALL_PREFIX}/lib/_${ASAPLIB}.so
     OUTPUT_VARIABLE stuff)
 endif()
