New Development: No             JIRA Issue: Yes CAS-3960         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: run sd unit/regression tests   Put in Release Notes: No              Module(s): Module Names change impacts.            Description: Describe your changes here...
The library _asap.so is separated into two pieces:

   * _asap.so now contains only python interfaces
   * C++ engines are moved to new library libasap.so

The _asap.so is installed in the same place as before 
($CASAROOT/python/2.6/asap) while libasap.so is installed to 
$CASAROOT/lib.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -605,6 +605,7 @@ set( CMAKE_INSTALL_NAME_DIR ${CMAKE_INSTALL_PREFIX}/lib )
 #
 # libraries and executables
 #
+set( ASAPPYLIB _asap )
 set( ASAPLIB asap )
 set( PYRAPLIB pyrap )
 set( ATNFLIB atnf )
