Fix python2.5 build and add extra options from scons

--- a/distutils/setup.cfg
+++ b/distutils/setup.cfg
@@ -5,15 +5,19 @@
 # to link against a static lib use e.g. 
 # wcslib=/usr/local/lib/libwcs-4.13.2.a
 
-#casacore = /usr/local
-#boost-root = /usr
-#boostlib = boost_python
-#cfitsio-root = /usr
-#cfitsiolib = cfitsio
-#wcs-root = /usr/local
-#wcslib = wcs
-#rpfits-root = /usr/local
-#rpfitslib = rpfits
+# extra root directory to search for other packages
+#extraroot = 
 
-#extra-root = 
+#casacoreroot = /usr/local
+#boostroot = /usr
+#boostlib = boost_python
+#cfitsioroot = /usr
+#cfitsiolib = cfitsio
+#wcsroot = /usr/local
+#wcslib = wcs
+#rpfitsroot = /usr/local
+#rpfitslib = rpfits
+#blaslib = blas
+#lapacklib = lapack
+#f2clib = gfortran
 
