added forwarding of casacorestatic

--- a/distutils/setup.cfg
+++ b/distutils/setup.cfg
@@ -9,6 +9,7 @@
 #extraroot = 
 
 #casacoreroot = /usr/local
+#casacorestatic = 0
 #boostroot = /usr
 #boostlib = boost_python
 #cfitsioroot = /usr
@@ -20,4 +21,3 @@
 #blaslib = blas
 #lapacklib = lapack
 #f2clib = gfortran
-
