New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Defined PKSMS option in cmake.
if PKSMS=ON, PKSMSreader/writer will be built while if PKSMS=OFF, 
those classes will be ignored. Default is OFF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,12 @@ option( USE_LIBCASACORE
 option( STANDALONE 
         "set ON to build standalone mode"
         OFF )
+option( PKSMS
+        "set ON to diable to build PKSMS2reader/writer"
+        OFF )
 message( STATUS "USE_LIBCASACORE = " ${USE_LIBCASACORE} )
 message( STATUS "STANDALONE = " ${STANDALONE} )
+message( STATUS "PKSMS = " ${PKSMS} )
 
 # Use casapy's fork of casacore  
 if ( NOT STANDALONE )
@@ -150,7 +154,6 @@ if( CMAKE_SYSTEM_NAME STREQUAL Linux )
 endif()
 
 add_definitions( ${CASACORE_DEFINITIONS} )
-
 
 #
 # mode specific settings
@@ -600,7 +603,12 @@ set( CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib )
 set( CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set( CMAKE_INSTALL_NAME_DIR ${CMAKE_INSTALL_PREFIX}/lib )
 
-
+#
+# PKSMS
+#
+if ( NOT PKSMS )
+   add_definitions( -DNOPKSMS )
+endif()
 
 #
 # libraries and executables
