New Development: Yes             JIRA Issue: Yes CAS-2825         Ready for Test: No      Interface Changes: Yes What Interface Changed: added new python module sd.edgemarker          Test Programs: not available   Put in Release Notes: Yes              Module(s): Module Names change impacts.            Description: Describe your changes here...
New python module edgemarker is available. The edgemarker is a tool to 
detect edge of observed area and mark data near edge as OFF. It can be 
used to calibrate OTF data without explicit OFF scan.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -38,6 +38,7 @@ set( PYTHON_MODULES
      ${PYTHONDIR}/scantable.py
      ${PYTHONDIR}/selector.py
      ${PYTHONDIR}/simplelinefinder.py
+     ${PYTHONDIR}/edgemarker.py
      ${PYTHONDIR}/svninfo.txt
      ${PYTHONDIR}/utils.py  )
 
