--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,6 +65,10 @@ set( ASAP_SRCS
      ${SRCDIR}/STUpgrade.cpp 
      ${SRCDIR}/STGrid.cpp
      ${SRCDIR}/STIdxIter.cpp
+     ${SRCDIR}/EdgeMarker.cpp
+     ${SRCDIR}/EdgeDetector.cpp
+     ${SRCDIR}/RasterEdgeDetector.cpp
+     ${SRCDIR}/GenericEdgeDetector.cpp
      ${SRCDIR}/Templates.cpp )
 
 set( ASAP_PYSRCS
@@ -88,6 +92,7 @@ set( ASAP_PYSRCS
      ${SRCDIR}/python_LogSink.cpp
      ${SRCDIR}/python_STGrid.cpp
      ${SRCDIR}/python_Iterator.cpp
+     ${SRCDIR}/python_EdgeMarker.cpp
      ${SRCDIR}/python_asap.cpp )
 
 add_library( ${ASAPLIB} SHARED ${ASAP_SRCS} )
