--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,8 @@ unexport LDFLAGS
 #export DH_OPTIONS=--buildsystem=python_distutils
 
 override_dh_auto_install:
-	python setup.py install --root=debian/asap --install-layout=deb
+	python setup.py build_ext --casacoreroot=/usr
+	python setup.py install --root=debian/python-asap --install-layout=deb
 
 override_dh_auto_clean:
 
