--- a/debian/rules
+++ b/debian/rules
@@ -13,12 +13,14 @@ unexport LDFLAGS
 #export DH_OPTIONS=--buildsystem=python_distutils
 
 override_dh_auto_install:
-	python setup.py build_ext --casacoreroot=/usr
 	python setup.py install --root=debian/python-asap --install-layout=deb
 
 override_dh_auto_clean:
+	python setup.py clean
+	scons -c
 
 override_dh_auto_build:
+	python setup.py build_ext --casacoreroot=/usr
 
 %:
 	dh $@
