New Development: No             JIRA Issue: Yes (CAS-4141/CSV-1526)         Ready for Test: Yes (*** Fix for CASA 4.0 ***)      Interface Changes: No What Interface Changed:          Test Programs:   Put in Release Notes: No              Module(s):            Description: For got to commit build and import code of sbseparator module. Added known issues and warning messages.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -35,6 +35,7 @@ set( PYTHON_MODULES
      ${PYTHONDIR}/opacity.py
      ${PYTHONDIR}/parameters.py
 #     ${PYTHONDIR}/plotter2.py
+     ${PYTHONDIR}/sbseparator.py
      ${PYTHONDIR}/scantable.py
      ${PYTHONDIR}/selector.py
      ${PYTHONDIR}/simplelinefinder.py
