New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
First version of single dish apply table.

STApplyTable: base class
STCalTsys: apply table for Tsys calibration
STCalSky: apply table for sky calibration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,9 @@ set( ASAP_SRCS
      ${SRCDIR}/RasterEdgeDetector.cpp
      ${SRCDIR}/GenericEdgeDetector.cpp
      ${SRCDIR}/PlotHelper.cpp
+     ${SRCDIR}/STApplyTable.cpp
+     ${SRCDIR}/STCalTsys.cpp
+     ${SRCDIR}/STCalSky.cpp
      ${SRCDIR}/Templates.cpp )
 
 set( ASAP_PYSRCS
