New Development: No             JIRA Issue: No (removal of )         Ready for Test: Yes      Interface Changes: Yes What Interface Changed: Removal of template definitions          Test Programs: all single dish unit tests and regression tests   Put in Release Notes: No              Module(s): all ASAP module            Description: Removed Template.cpp as suggested by Malte.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,8 +71,7 @@ set( ASAP_SRCS
      ${SRCDIR}/PlotHelper.cpp
      ${SRCDIR}/STApplyTable.cpp
      ${SRCDIR}/STCalTsys.cpp
-     ${SRCDIR}/STCalSky.cpp
-     ${SRCDIR}/Templates.cpp )
+     ${SRCDIR}/STCalSky.cpp )
 
 set( ASAP_PYSRCS
 #     ${SRCDIR}/python_Plotter2.cpp
