New Development: Yes             JIRA Issue: Yes CAS-4770, 4771, 4772         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
First version of calibration classes for sky calibration (STCalSkyPSAlma) 
and Tsys calibration (STCalTsys), which are derived from base class 
(STCalibration). 

The caltable classes, STCalSky and STCalTsys, are renamed as STCalSkyTable 
and STCalTsysTable, respectively.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,8 +70,11 @@ set( ASAP_SRCS
      ${SRCDIR}/GenericEdgeDetector.cpp
      ${SRCDIR}/PlotHelper.cpp
      ${SRCDIR}/STApplyTable.cpp
-     ${SRCDIR}/STCalTsys.cpp
-     ${SRCDIR}/STCalSky.cpp )
+     ${SRCDIR}/STCalTsysTable.cpp
+     ${SRCDIR}/STCalSkyTable.cpp
+     ${SRCDIR}/STCalibration.cpp
+     ${SRCDIR}/STCalSkyPSAlma.cpp
+     ${SRCDIR}/STCalTsys.cpp )
 
 set( ASAP_PYSRCS
 #     ${SRCDIR}/python_Plotter2.cpp
