New Development: Yes             JIRA Issue: Yes (CAS-4141)         Ready for Test: Yes      Interface Changes: Yes What Interface Changed: - a new c++ class, STSideBandSep and its python interface. - a new method set_lo1 in the sbseparator module.          Test Programs: manual tests by CSV scientists.   Put in Release Notes: No              Module(s): STSidebandSep (a new class) and sbseparator            Description: Added a new c++ class, STSideBandSep, and its python interface (python_STSideBandSep.cpp). The class works on calculating frequency information of image side band and fill scantable. Also added a new python method, set_lo1(double), in sbseparator module. This is to allow user to set LO1 frequency to solve frequencies of image side band manually.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,7 @@ set( ASAP_SRCS
      ${SRCDIR}/RasterEdgeDetector.cpp
      ${SRCDIR}/GenericEdgeDetector.cpp
      ${SRCDIR}/PlotHelper.cpp
+     ${SRCDIR}/STSideBandSep.cpp
      ${SRCDIR}/STApplyTable.cpp
      ${SRCDIR}/STCalTsysTable.cpp
      ${SRCDIR}/STCalSkyTable.cpp
@@ -98,6 +99,7 @@ set( ASAP_PYSRCS
      ${SRCDIR}/python_Iterator.cpp
      ${SRCDIR}/python_EdgeMarker.cpp
      ${SRCDIR}/python_PlotHelper.cpp
+     ${SRCDIR}/python_STSideBandSep.cpp
      ${SRCDIR}/python_asap.cpp )
 
 add_library( ${ASAPLIB} SHARED ${ASAP_SRCS} )
