New Development: Yes             JIRA Issue: Yes CAS-4770 and its sub-tickets         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
First version of applycal for single dish calibration.
Added new classes for the operation (STApplyCal, Calibrator, PSAlmaCalibrator, 
Locator, BisectionLocator, Interpolator1D, NearestInterpolator1D). 
Also, modified existing classes to fit with implementation of applycal.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,7 +75,14 @@ set( ASAP_SRCS
      ${SRCDIR}/STCalSkyTable.cpp
      ${SRCDIR}/STCalibration.cpp
      ${SRCDIR}/STCalSkyPSAlma.cpp
-     ${SRCDIR}/STCalTsys.cpp )
+     ${SRCDIR}/STCalTsys.cpp
+     ${SRCDIR}/STApplyCal.cpp
+     ${SRCDIR}/Calibrator.cpp
+     ${SRCDIR}/PSAlmaCalibrator.cpp
+     ${SRCDIR}/Locator.cpp
+     ${SRCDIR}/BisectionLocator.cpp
+     ${SRCDIR}/Interpolator1D.cpp
+     ${SRCDIR}/NearestInterpolator1D.cpp )
 
 set( ASAP_PYSRCS
 #     ${SRCDIR}/python_Plotter2.cpp
