New Development: No             JIRA Issue: Yes CAS-4770, CAS-4774         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Updated STApplyCal to be able to specify interpolation method. 
The method can be specified in time and frequency axes independently. 
Possible options are nearest, linear (default), (natural) cubic spline, 
and polynomial with arbitrary order.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -81,8 +81,14 @@ set( ASAP_SRCS
      ${SRCDIR}/PSAlmaCalibrator.cpp
      ${SRCDIR}/Locator.cpp
      ${SRCDIR}/BisectionLocator.cpp
+     ${SRCDIR}/HuntLocator.cpp
+     ${SRCDIR}/BufferedBisectionLocator.cpp
      ${SRCDIR}/Interpolator1D.cpp
-     ${SRCDIR}/NearestInterpolator1D.cpp )
+     ${SRCDIR}/NearestInterpolator1D.cpp
+     ${SRCDIR}/LinearInterpolator1D.cpp
+     ${SRCDIR}/BufferedLinearInterpolator1D.cpp
+     ${SRCDIR}/CubicSplineInterpolator1D.cpp
+     ${SRCDIR}/PolynomialInterpolator1D.cpp )
 
 set( ASAP_PYSRCS
 #     ${SRCDIR}/python_Plotter2.cpp
