New Development: No             JIRA Issue: Yes CAS-4770         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs:   Put in Release Notes: No              Module(s): Module Names change impacts.            Description: Describe your changes here...
First version of Calibrator class for OTF scan without OFF.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,6 +75,7 @@ set( ASAP_SRCS
      ${SRCDIR}/STCalSkyTable.cpp
      ${SRCDIR}/STCalibration.cpp
      ${SRCDIR}/STCalSkyPSAlma.cpp
+     ${SRCDIR}/STCalSkyOtfAlma.cpp
      ${SRCDIR}/STCalTsys.cpp
      ${SRCDIR}/STApplyCal.cpp
      ${SRCDIR}/Calibrator.cpp
