--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,9 @@
 set( ASAPROOT ${ASAP_SOURCE_DIR} )
 set( SRCDIR ${ASAPROOT}/src )
 
-# include QT_USE_FILE
-include( ${QT_USE_FILE} )
-
 # include path
 include_directories( ${SRCDIR} 
                      ${Boost_INCLUDE_DIR}
-                     ${QT4_INCLUDE_DIRS}
                      ${ASAPROOT}/external-alma 
                      ${ASAPROOT}/external/libpyrap/pyrap-0.3.2 )
 
@@ -24,7 +20,7 @@ add_definitions( -DHAVE_LIBPYRAP )
 
 # source files for libpyrap
 set( ASAP_SRCS
-#     ${SRCDIR}/Plotter2.cpp
+     ${SRCDIR}/Plotter2.cpp
      ${SRCDIR}/concurrent.cpp
      ${SRCDIR}/MathUtils.cpp
      ${SRCDIR}/TableTraverse.cpp
@@ -84,7 +80,7 @@ set( ASAP_SRCS
      ${SRCDIR}/CalibrationManager.cpp )
 
 set( ASAP_PYSRCS
-#     ${SRCDIR}/python_Plotter2.cpp
+     ${SRCDIR}/python_Plotter2.cpp
      ${SRCDIR}/python_Scantable.cpp
      ${SRCDIR}/python_STFiller.cpp
      ${SRCDIR}/python_STSelector.cpp
@@ -120,7 +116,8 @@ set_target_properties( ${ASAPPYLIB}
 
 target_link_libraries( ${ASAPLIB} 
                        #${Boost_LIBRARIES}
-                       ${QT4_LIBRARIES} 
+                       ${X11_LIBRARIES} 
+                       ${PGPLOT_LIBRARIES} 
                        ${PYRAPLIB} 
                        ${ATNFLIB} 
                        #${CASACORE_LIBRARIES} 
