New Development: No             JIRA Issue: Yes (CAS-3620)         Ready for Test: Yes      Interface Changes: No What Interface Changed:          Test Programs:   Put in Release Notes: Yes              Module(s): sd            Description: modified so that plotter2 module is imported only in CASA environment, not in standalone ASAP.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,9 @@ link_directories( ${SRCDIR} )
 # use libpyrap
 add_definitions( -DHAVE_LIBPYRAP )
 
+# enable plotter2
+add_definitions( -DENABLE_PLOTTER2 )
+
 # source files for libpyrap
 set( ASAP_SRCS
      ${SRCDIR}/Plotter2.cpp
